--- a/.github/workflows/maven-library-publish.yml
+++ b/.github/workflows/maven-library-publish.yml
@@ -42,4 +42,4 @@ jobs:
       - name: Publish to GitHub Packages Apache Maven
         run: mvn --batch-mode deploy -PgithubDeploy
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.CI_TOKEN }}
